added html and css to lookbook pages

--- a/src/app/lookbook/villa-regensburg/villa-regensburg.component.html
+++ b/src/app/lookbook/villa-regensburg/villa-regensburg.component.html
@@ -1,3 +1,23 @@
-<p>
-  villa-regensburg works!
-</p>
+<div class="container-fluid title-container" style="margin:170px auto 60px auto;">
+  <h1 style="margin-bottom:10px;">{{this.LanguagesService.lookbookTitle18}}</h1>
+  <div>
+    <a *ngIf="this.previousLookbookPage!==''"  (click)="navigate(this.previousLookbookUrl)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousLookbookPage}}</span></a>
+    <a *ngIf="this.nextLookbookPage!==''" (click)="navigate(this.nextLookbookUrl)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextLookbookPage}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+  </div>
+</div>
+<div id="gallery" class="container-fluid" style="margin-bottom:10px">
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/seaside-resort/seaside_01.jpg')"></div>
+  <div class="row gallery-row">
+    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/seaside-resort/seaside_02.jpg')"></div>
+    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/seaside-resort/seaside_03.jpg')"></div>
+  </div>
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/seaside-resort/seaside_04.jpg')"></div>
+  <div class="row gallery-row">
+    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/seaside-resort/seaside_05.jpg')"></div>
+    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/seaside-resort/seaside_06.jpg')"></div>
+  </div>
+</div>
+<div style="height:140px;">
+    <a *ngIf="this.previousLookbookPage!==''"  (click)="navigate(this.previousLookbookUrl)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousLookbookPage}}</span></a>
+    <a *ngIf="this.nextLookbookPage!==''" (click)="navigate(this.nextLookbookUrl)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextLookbookPage}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+</div>
