--- a/src/app/lookbook/seaside-resort/seaside-resort.component.html
+++ b/src/app/lookbook/seaside-resort/seaside-resort.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid title-container" style="margin:170px auto 60px auto;">
-  <h1 style="margin-bottom:10px;">Seaside Resort</h1>
+  <h1 style="margin-bottom:10px;">{{this.LanguagesService.lookbookTitle1}}</h1>
   <div>
     <a *ngIf="this.previousLookbookPage!==''"  (click)="navigate(this.previousLookbookUrl)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousLookbookPage}}</span></a>
     <a *ngIf="this.nextLookbookPage!==''" (click)="navigate(this.nextLookbookUrl)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextLookbookPage}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
