--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: rgb(0,0,0); opacity: 1;">
+<nav [ngClass]="{'navbar-light':mustBeWhite, 'white-navbar':mustBeWhite, 'navbar-dark':!mustBeWhite, 'black-navbar':!mustBeWhite}"
+class="navbar navbar-expand-lg fixed-top">
     <a class="navbar-brand" routerLink="home">
         <img src="../../assets/images/Logo-Eggersmann.jpg" alt="Logo" style="width:40px;">
         <span id="title">eggersmann</span>
