--- a/src/app/e30/aluminum-quartzite/aluminum-quartzite.component.html
+++ b/src/app/e30/aluminum-quartzite/aluminum-quartzite.component.html
@@ -1,22 +1,19 @@
 <div class="container-fluid title-container" style="margin:170px auto 60px auto;">
   <h1 style="margin-bottom:10px;">{{this.LanguagesService.e30Title1}}</h1>
   <div>
-    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousE30Page}}</span></a>
-    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousE30Page}}</span></a>
+    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
   </div>
 </div>
 <div id="gallery" class="container-fluid" style="margin-bottom:10px">
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London01_1400x800.jpg')"></div>
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/aluminum-quartzite/Torino_01.jpg')"></div>
   <div class="row gallery-row">
-    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/csm_Villa_London02_960x1260_a9464dce1f.jpg')"></div>
-    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London03_1400x800.jpg')"></div>
+    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/aluminum-quartzite/csm_Torino_02_612fac8cf6.jpg')"></div>
+    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/aluminum-quartzite/Torino_03.jpg')"></div>
   </div>
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London04_1400x800.jpg')"></div>
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London05_1400x800.jpg')"></div>
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London06_1400x800.jpg')"></div>
-
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/aluminum-quartzite/Torino_04.jpg')"></div>
 </div>
 <div style="height:140px;">
-    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousE30Page}}</span></a>
-    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousE30Page}}</span></a>
+    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
 </div>
