--- a/src/app/e30/boxtec/boxtec.component.html
+++ b/src/app/e30/boxtec/boxtec.component.html
@@ -1,22 +1,33 @@
 <div class="container-fluid title-container" style="margin:170px auto 60px auto;">
   <h1 style="margin-bottom:10px;">{{this.LanguagesService.e30AccessoriesTitle2}}</h1>
   <div>
-    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousE30Page}}</span></a>
-    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousE30Page}}</span></a>
+    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
   </div>
 </div>
 <div id="gallery" class="container-fluid" style="margin-bottom:10px">
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London01_1400x800.jpg')"></div>
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec_01.jpg')"></div>
   <div class="row gallery-row">
-    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/csm_Villa_London02_960x1260_a9464dce1f.jpg')"></div>
-    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London03_1400x800.jpg')"></div>
+    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/csm_boxtec_02_e2752f4b5b.jpg')"></div>
+    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec_03.jpg')"></div>
   </div>
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London04_1400x800.jpg')"></div>
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London05_1400x800.jpg')"></div>
-  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/london/Villa_London06_1400x800.jpg')"></div>
-
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec_04.jpg')"></div>
+  <div class="row gallery-row">
+    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/csm_boxtec_05_41ed4d58fa.jpg')"></div>
+    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec_06.jpg')"></div>
+  </div>
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec_07.jpg')"></div>
+  <div class="row gallery-row">
+    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/csm_boxtec08_960x1260_183a401e0f.jpg')"></div>
+    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec09_1400x800.jpg')"></div>
+  </div>
+  <div class="col-xs-12 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec10_1400x800.jpg')"></div>
+  <div class="row gallery-row">
+    <div class="col-xs-12 col-md-4 col-bottom-border col-right-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/csm_boxtec11_960x1260_78060a8985.jpg')"></div>
+    <div class="col-xs-12 col-md-8 col-bottom-border col-image gallery-image" style="background-image:url('../../../assets/images/e30/boxtec/boxtec12_1400x800.jpg')"></div>
+  </div>
 </div>
 <div style="height:140px;">
-    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousE30Page}}</span></a>
-    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+    <a *ngIf="this.previousE30Page!==''"  (click)="navigate(this.previousE30Url)" style="float:left;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousE30Page}}</span></a>
+    <a *ngIf="this.nextE30Page!==''" (click)="navigate(this.nextE30Url)" style="float:right;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextE30Page}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
 </div>
