--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link top-right-link" routerLink="lookbook">{{this.languagesService.navItem4}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="programme">{{this.languagesService.navItem5}}</a>
+          <a class="nav-link top-right-link" routerLink="e30">{{this.languagesService.navItem5}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link top-right-link" routerLink="unique">{{this.languagesService.navItem6}}</a>
