--- a/src/app/lookbook/maison-hambourg/maison-hambourg.component.html
+++ b/src/app/lookbook/maison-hambourg/maison-hambourg.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid title-container" style="margin:170px auto 60px auto;">
   <h1 style="margin-bottom:10px;">{{this.LanguagesService.lookbookTitle12}}</h1>
   <div>
-    <a *ngIf="this.previousLookbookPage!==''"  (click)="navigate(this.previousLookbookUrl)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousLookbookPage}}</span></a>
-    <a *ngIf="this.nextLookbookPage!==''" (click)="navigate(this.nextLookbookUrl)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextLookbookPage}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+    <a *ngIf="this.previousLookbookPage!==''"  (click)="navigate(this.previousLookbookUrl)" style="float:left;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousLookbookPage}}</span></a>
+    <a *ngIf="this.nextLookbookPage!==''" (click)="navigate(this.nextLookbookUrl)" style="float:right;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextLookbookPage}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
   </div>
 </div>
 <div id="gallery" class="container-fluid" style="margin-bottom:10px">
@@ -18,6 +18,6 @@
   </div>
 </div>
 <div style="height:140px;">
-    <a *ngIf="this.previousLookbookPage!==''"  (click)="navigate(this.previousLookbookUrl)" style="float:left;cursor:pointer"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousLookbookPage}}</span></a>
-    <a *ngIf="this.nextLookbookPage!==''" (click)="navigate(this.nextLookbookUrl)" style="float:right;cursor:pointer"><span style="position:relative;top:-9px;">{{this.nextLookbookPage}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+    <a *ngIf="this.previousLookbookPage!==''"  (click)="navigate(this.previousLookbookUrl)" style="float:left;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousLookbookPage}}</span></a>
+    <a *ngIf="this.nextLookbookPage!==''" (click)="navigate(this.nextLookbookUrl)" style="float:right;cursor:pointer;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextLookbookPage}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
 </div>
