--- a/src/app/unique/luna-grey/luna-grey.component.html
+++ b/src/app/unique/luna-grey/luna-grey.component.html
@@ -2,8 +2,8 @@
   <div class="container-fluid title-container" style="margin:0px auto 60px auto;">
     <h1 style="margin-bottom:10px;">{{this.LanguagesService.uniqueTitle9}}</h1>
     <div>
-      <a *ngIf="this.previousUniquePage!==''"  (click)="navigate(this.previousUniqueUrl)" style="float:left;cursor:pointer;color:white"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousUniquePage}}</span></a>
-      <a *ngIf="this.nextUniquePage!==''" (click)="navigate(this.nextUniqueUrl)" style="float:right;cursor:pointer;color:white"><span style="position:relative;top:-9px;">{{this.nextUniquePage}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+      <a *ngIf="this.previousUniquePage!==''"  (click)="navigate(this.previousUniqueUrl)" style="float:left;cursor:pointer;color:white;font-family: 'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousUniquePage}}</span></a>
+      <a *ngIf="this.nextUniquePage!==''" (click)="navigate(this.nextUniqueUrl)" style="float:right;cursor:pointer;color:white;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextUniquePage}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
     </div>
   </div>
   <div id="gallery" class="container-fluid" style="margin-bottom:10px">
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div style="height:140px;">
-      <a *ngIf="this.previousUniquePage!==''"  (click)="navigate(this.previousUniqueUrl)" style="float:left;cursor:pointer;color:white"><i class="material-icons" style="font-size:30px;">navigate_before</i><span style="position:relative;top:-9px;">{{this.previousUniquePage}}</span></a>
-      <a *ngIf="this.nextUniquePage!==''" (click)="navigate(this.nextUniqueUrl)" style="float:right;cursor:pointer;color:white"><span style="position:relative;top:-9px;">{{this.nextUniquePage}}</span><i class="material-icons" style="font-size:30px;">navigate_next</i></a>
+      <a *ngIf="this.previousUniquePage!==''"  (click)="navigate(this.previousUniqueUrl)" style="float:left;cursor:pointer;color:white;font-family: 'Brandon_light', Arial, Verdana;"><i class="material-icons" style="font-size:23px;">navigate_before</i><span style="position:relative;top:-7px;">{{this.previousUniquePage}}</span></a>
+      <a *ngIf="this.nextUniquePage!==''" (click)="navigate(this.nextUniqueUrl)" style="float:right;cursor:pointer;color:white;font-family:'Brandon_light', Arial, Verdana;"><span style="position:relative;top:-7px;">{{this.nextUniquePage}}</span><i class="material-icons" style="font-size:23px;">navigate_next</i></a>
   </div>
 </div>
