--- a/src/app/distributors/distributors.component.css
+++ b/src/app/distributors/distributors.component.css
@@ -34,7 +34,7 @@
 }
 
 .lux-map__image{
-  width:20%;
+  width:50%;
   margin:auto;
 }
 
@@ -45,12 +45,12 @@
   transition: fill 0.3s;
 }
 
-.lux-map__image .active-region:hover{
+.lux-map__image:hover path{
   fill: grey;
 }
 
 .nc-map__image{
-  width:50%;
+  width:70%;
   margin:auto;
 }
 
@@ -61,6 +61,22 @@
   transition: fill 0.3s;
 }
 
-.nc-map__image .active-region:hover{
+.nc-map__image:hover path{
+  fill: grey;
+}
+
+.morroco-map__image{
+  width:70%;
+  margin:auto;
+}
+
+.morroco-map__image path{
+  fill: lightgrey;
+  stroke: white;
+  stroke-width: 1px;
+  transition: fill 0.3s;
+}
+
+.morroco-map__image:hover path{
   fill: grey;
 }
