--- a/src/app/distributors/distributors.component.css
+++ b/src/app/distributors/distributors.component.css
@@ -142,6 +142,29 @@
   fill: grey;
 }
 
+.distributor-expansion{
+  width:85%;
+  margin:auto;
+}
+
+.row-spacing{
+  margin-top:50px;
+  margin-bottom:50px;
+}
+
+.accordion-title{
+  margin-top:100px;
+  margin-bottom:20px;
+  text-align: center;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 42px !important;
+}
+
+agm-map{
+  height:300px;
+}
+
+
 @media only screen and (max-width: 1100px){
   .map-title-row2{
     margin-top:50px;
