--- a/src/app/distributors/distributors.component.css
+++ b/src/app/distributors/distributors.component.css
@@ -158,10 +158,17 @@
   text-align: center;
   font-family: 'Brandon_light', Arial, Verdana;
   font-size: 42px !important;
+  font-weight:bold;
 }
 
-agm-map{
-  height:300px;
+.title-expansion{
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size:20px;
+  font-weight: bold;
+}
+
+.right-text-expansion{
+  font-family: 'Brandon_light', Arial, Verdana;
 }
 
 
