--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="row contact-container">
   <div class="col-xs-12 col-md-4">
-      <mat-vertical-stepper [linear]="false" #stepper style="padding-top: 100px;">
+      <mat-vertical-stepper [linear]="false" #stepper style="padding-top: 100px;background-color:rgba(255, 255, 255, 0)">
           <mat-step [stepControl]="firstFormGroup">
             <form [formGroup]="firstFormGroup">
               <ng-template matStepLabel>Become partner ?</ng-template>
